--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "precommit": "lint-staged",
     "prepare": "husky install",
     "semantic-release": "semantic-release",
-    "test": "echo '🚧 Tests coming soon'"
+    "test": "echo '🚧 Tests coming soon'",
+    "debug": "ts-node src/index.ts"
   },
   "dependencies": {
     "@actions/core": "^1.10.0",
@@ -40,7 +41,7 @@
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@types/jest": "^29.5.1",
-    "@types/node": "^20.2.5",
+    "@types/node": "^22.10.2",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
     "@vercel/ncc": "^0.36.1",
@@ -56,7 +57,8 @@
     "prettier-package-json": "^2.8.0",
     "semantic-release": "^21.0.2",
     "ts-jest": "^29.1.0",
-    "typescript": "^5.0.4"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2"
   },
   "keywords": [
     "actions",
@@ -66,7 +68,7 @@
     "update"
   ],
   "engines": {
-    "node": ">=14 <=18"
+    "node": ">=20"
   },
   "publishConfig": {
     "access": "public",
